[project]
name = "pythondisourseparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "torch",
    "transformers",
    "isanlp @ git+https://github.com/iinemo/isanlp.git",
    "isanlp-rst",
]
